# OA_Dosing

./: README.md  pyproject.toml
notebooks/: test.ipynb
oa_dosing/: __init__.py
oa_dosing/model/: regimens.py
