[tool.poetry]
name = "oa-dosing"
version = "0.1.0"
description = "Extension to OMOP Alchemy module for regimen-specific data models"
authors = ["georgie <georgina.kennedy@unsw.edu.au>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
omop-alchemy = {git = "git@github.com:AustralianCancerDataNetwork/OMOP_Alchemy.git"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
